change getLast to make compatible with Java 17